--- a/challenge.html
+++ b/challenge.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
                 <img src="https://images.pexels.com/photos/730547/pexels-photo-730547.jpeg?auto=compress&cs=tinysrgb&w=50&h=50" alt="MBTC Logo" class="logo">
@@ -29,7 +29,7 @@
                 <span></span>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- Challenge Page Content -->
     <main class="challenge-page">
