--- a/about/index.html
+++ b/about/index.html
@@ -564,7 +564,7 @@
   <script src="global.js" defer></script>
 </head>
 <body>
-<header id="header" class="site-header">
+<!-- <header id="header" class="site-header">
     <div class="container header-container">
         <a href="#" class="logo">
             <img src="images/1_2956.png" alt="MDTC Logo">
@@ -586,7 +586,7 @@
             <span></span>
         </button>
     </div>
-</header>
+</header> -->
 <section id="hero" class="hero-section">
     <div class="hero-bg-blur"></div>
     <div class="container hero-container">
@@ -781,7 +781,7 @@
         </div>
     </div>
 </section>
-<footer id="footer" class="site-footer">
+<!-- <footer id="footer" class="site-footer">
     <div class="container">
         <div class="footer-main">
             <div class="footer-about">
@@ -823,6 +823,6 @@
             <p>Mdtcfunded.com is owned and operated by MDTC LLC, a limited company registered in the United Arab Emirates. Disclaimer: MDTC LLC does not undertake any regulated activities. MDTC LLC does not act as or conduct services as a broker. MDTC LLC is not a financial institution of any kind. It’s not a broker, and it does not ‎market for any brokerage services.‎ MDTC LLC does not act as or conduct services as a custodian. Purchases of programs should not be considered deposits. All program fees are used for operation costs including, but not limited to, staff, technology and other business-related expenses. Information on this site is not directed at residents in any country or jurisdiction where such distribution or use would be contrary to local law or regulation. Risk Disclosure: The Services Provided On This Website Are Professional Skill-Assessment Services. The Outcome Of The Proposed Services Is Necessarily Determined By The Individual Professional Skill Level And Ability To Perform Under The Program Guidelines And Objectives As Elaborated For Each Service Separately. Clients Are Advised To Conclude A Thorough Study Of The Requirements Of The Funding Programs Before Signing Up For Any Of The Services. All accounts operate within a simulated trading environment. These platforms mirror real trading activities, but they do not engage with genuine money or assets. Any earnings, profits, or losses experienced within this simulated trading context do not translate to actual financial outcomes and cannot be claimed or actualized beyond this educational context.</p>
         </div>
     </div>
-</footer>
+</footer> -->
 </body>
 </html>
