--- a/about/index.html
+++ b/about/index.html
@@ -564,7 +564,7 @@
   <script src="global.js" defer></script>
 </head>
 <body>
-<!-- <header id="header" class="site-header">
+<header id="header" class="site-header">
     <div class="container header-container">
         <a href="#" class="logo">
             <img src="images/1_2956.png" alt="MDTC Logo">
@@ -586,7 +586,7 @@
             <span></span>
         </button>
     </div>
-</header> -->
+</header>
 <section id="hero" class="hero-section">
     <div class="hero-bg-blur"></div>
     <div class="container hero-container">
