correction to styling

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="global.css">
   <style id="sections-styles">
 /* CSS for section section:header */
-.site-header {
+/* .site-header {
     padding-top: 12px;
     padding-bottom: 12px;
     position: absolute;
@@ -559,7 +559,7 @@
         grid-template-columns: 1fr;
         gap: 40px;
     }
-}
+} */
   </style>
   <script src="global.js" defer></script>
 </head>
