--- a/challenge/index.html
+++ b/challenge/index.html
@@ -820,10 +820,10 @@
             <div class="prop-challenge-badge">
                 <!--merged image-->
                 <div class="avatar-group">
-                    <img src="images/acd79576db2f255c593a7c578b8996bad5bac07c.png" alt="User avatar 1" class="avatar">
-                    <img src="images/52a1cd45fc3fde158416bea3e4416eea53589f85.png" alt="User avatar 2" class="avatar">
-                    <img src="images/1_2562.svg" alt="User avatar 3" class="avatar">
-                    <div class="avatar avatar-placeholder"></div>
+                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=300&h=300" alt="User avatar 1" class="avatar">
+                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=300&h=300" alt="User avatar 2" class="avatar">
+                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=300&h=300" alt="User avatar 3" class="avatar">
+                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=300&h=300" alt="User avatar 3" class="avatar">
                 </div>
                 <span>MDTC Prop Challenge</span>
             </div>
