--- a/contactform.html
+++ b/contactform.html
@@ -1,198 +1,4 @@
-<style>
-      * {
-        margin: 0;
-        padding: 100;
-        box-sizing: border-box;
-      }
 
-      .container {
-        width: 100%;
-        max-width: 845px;
-        margin: 0 auto;
-      }
-
-      .form-container {
-        margin-bottom: 60px;
-      }
-
-      .form-row {
-        display: flex;
-        flex-direction: column;
-        gap: 7px;
-        margin-bottom: 60px;
-      }
-
-      .form-row.two-columns {
-        flex-direction: column;
-      }
-
-      .form-group {
-        flex: 1;
-      }
-
-      .form-group label {
-        display: block;
-        color: #ffffff;
-        font-size: 15px;
-        font-weight: 700;
-        line-height: 24px;
-        margin-bottom: 18px;
-      }
-
-      .required {
-        color: #f56c6c;
-        font-size: 16px;
-        font-weight: 700;
-        margin-left: 4px;
-      }
-
-      .form-group input,
-      .form-group textarea {
-        width: 100%;
-        background-color: #072604;
-        border: 1px solid #10490a;
-        border-radius: 8px;
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 500;
-        padding: 14.67px 16px;
-        outline: none;
-        transition: all 0.3s ease;
-      }
-
-      .form-group input {
-        height: 48px;
-      }
-
-      .form-group textarea {
-        font-family:
-          "Roboto",
-          -apple-system,
-          Roboto,
-          Helvetica,
-          sans-serif;
-        font-size: 15px;
-        font-weight: 400;
-        padding: 12px 16px;
-        resize: none;
-        min-height: 114px;
-      }
-
-      .form-group input::placeholder,
-      .form-group textarea::placeholder {
-        color: #687892;
-      }
-
-      .form-group textarea::placeholder {
-        color: #868e96;
-      }
-
-      .form-group input:focus,
-      .form-group textarea:focus {
-        ring: 2px solid #2ecd59;
-        border-color: #2ecd59;
-      }
-
-      .submit-btn {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        padding: 10px 26px;
-        border-radius: 10px;
-        border: 1px solid #2ecd59;
-        background: linear-gradient(
-          93deg,
-          #26af18 12.78%,
-          rgba(46, 205, 89, 0.24) 133.49%
-        );
-        box-shadow: 0px 1px 35.5px -1px #2ecd59;
-        color: #ffffff;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 32px;
-        text-shadow: 0px 0.9px 0.7px #10490a;
-        min-width: 170px;
-        height: 52px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        margin-top: 60px;
-      }
-
-      .submit-btn:hover {
-        transform: scale(1.05);
-      }
-
-      .contact-info {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        margin-top: 60px;
-      }
-
-      .contact-item {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-      }
-
-      .contact-icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 36px;
-        height: 36px;
-        border-radius: 8px;
-        border: 1px solid #10490a;
-        background: linear-gradient(
-          205deg,
-          #10490a -2.83%,
-          #00b67a 48.58%,
-          #26af18 101.88%
-        );
-        padding: 8px;
-      }
-
-      .contact-text {
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 24px;
-      }
-
-      .success-message {
-        background-color: #26af18;
-        color: white;
-        padding: 12px 20px;
-        border-radius: 8px;
-        margin-top: 20px;
-        display: none;
-      }
-
-      .error-message {
-        background-color: #f56c6c;
-        color: white;
-        padding: 12px 20px;
-        border-radius: 8px;
-        margin-top: 20px;
-        display: none;
-      }
-
-      /* Responsive Design */
-      @media (min-width: 1024px) {
-        .form-row.two-columns {
-          flex-direction: row;
-          gap: 15px;
-        }
-
-        .contact-info {
-          flex-direction: row;
-          gap: 25px;
-          align-items: center;
-        }
-      }
-
-    </style>
-  </head>
     <div class="container">
       <div class="form-container">
         <form id="contactForm">
@@ -430,4 +236,7 @@
           this.style.borderColor = "#F56C6C";
         }
       });
+
+      // Mobile touch optimization
+      document.addEventListener('touchstart', function() {}, {passive: true});
     </script>
